# apps/api/src/app.module.ts
@@ -15,6 +15,7 @@ import { PrismaModule } from '@/prisma/prisma.module';
 import { RawSqlModule } from '@/raw-sql/raw-sql.module';
 import { RequestContextModule } from '@/request-context/request-context.module';
 import { TransactionsModule } from '@/transactions/transactions.module';
+import { TransfersModule } from '@/transfers/transfers.module';
 import { UserSettingsModule } from '@/user-settings/user-settings.module';
 import { VALIDATION_PIPE } from '@/validation/validation.options';
 
@@ -35,6 +36,7 @@ import { VALIDATION_PIPE } from '@/validation/validation.options';
     CategoriesModule,
     MovesModule,
     TransactionsModule,
+    TransfersModule,
   ],
   providers: [{ provide: APP_PIPE, useValue: VALIDATION_PIPE }],
 })
